# erddap-feeder

./: Cargo.toml  Dockerfile  README.md  release_notes.md
.github/workflows/: rust-checks.yml  rust-release.yml
resources/: datasets.xml  init.jsonl
src/: lib.rs  main.rs
